add_executable(ConvolutionExample examples/ConvolutionExample.cpp)
target_link_libraries(ConvolutionExample PRIVATE ${LLVM_LIBRARIES} Optimization Kernels)
target_include_directories(ConvolutionExample PRIVATE ${LLVM_INCLUDE_DIRS})
llvm_map_components_to_libnames(LLVM_LIBRARIES Core ExecutionEngine Support)